# apps

./: README.rst  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
citc_apps/: main.py
jupyterhub/: install.yaml  meta.yaml  requirements.yml
roles/jupyterhub/defaults/: main.yml
roles/jupyterhub/handlers/: main.yml
roles/jupyterhub/molecule/default/: converge.yml  molecule.yml  requirements.yml  verify.yml
roles/jupyterhub/tasks/: firewall.yml  main.yml  nginx.yml  pam.yml
roles/jupyterhub/templates/: jupyterhub.service.j2  jupyterhub_config.py.j2
