# SPDX-FileCopyrightText: © 2020 Matt Williams <matt@milliams.com>
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "citc-apps"
version = "0.1.0"
description = ""
authors = ["Matt Williams <matt@milliams.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/clusterinthecloud/apps"

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
ansible-lint = "^4.2.0"
molecule = {extras = ["lint", "docker"], version = "^3.0.2"}

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"